--- a/configs/config.dev.yaml
+++ b/configs/config.dev.yaml
@@ -17,3 +17,8 @@ data:
     addr: 127.0.0.1:6379
     read_timeout: 0.2s
     write_timeout: 0.2s
+  dingtalk:
+    endpoint: "https://oapi.dingtalk.com"
+    app_key: "dinglz1setxqhrpp7aa0"       
+    app_secret: "uHVTlmVFojonyjlBIDbzsxLZ_iJfviqUMpT1LKNxP9P4TYr8LhaiwymiQfb0fjxr" # 明文存储（不推荐生产环境）
+    timeout: "5s"                        
